# CivisAI

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  run.sh
backend/: .dockerignore  dockerfile  pyproject.toml  run.sh
backend/src/: run.sh
backend/src/ai_engines/: embeddings_model.py  llm_ollama.py  llm_test_local.py  prompts.py
backend/src/api/: container.py  index_endpoints.py  routes.py
backend/src/api/api_models/: requests.py  responses.py
backend/src/core/: settings.py
backend/src/db/: qdrant_store.py  redis_history_store.py
backend/src/ingestion/: data_extraction.ipynb  ingestion_pipeline.py  loader.py  pipeline.py  redis_job_queue.py  splitter.py
backend/src/rag/: retrieval_pipeline.py
frontend/civis-ai-frontend/: dockerfile  index.html  package-lock.json  package.json
frontend/civis-ai-frontend/src/: App.tsx  Chat.tsx  api.ts
