[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis>=8.0.1",
    "uvicorn>=0.49.0",
    "beautifulsoup4>=4.15.0",
    "dotenv>=0.9.9",
    "fastapi>=0.138.1",
    "ipykernel>=7.3.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "trafilatura>=2.1.0",
]
